vcs/specs/parser/fail/statements/invalid_defer_expr.vr
// @test: parse-fail
// @level: L0
// @tags: parser, statements, defer, invalid, error
// @description: Test defer statement with invalid expression (let is a statement, not expression)
// @expected-error: E045

fn test() {
    defer let x = 5;
}
